<resources>
    <string name="app_name">Spendings</string>
    <string name="budget">Бюджет</string>
    <string name="delete_all">delete all</string>
    <string name="update_all">update all</string>
    <string name="last_spendings">Последние траты</string>
    <string name="credit_cards">Карты</string>
    <string name="title_activity_spending">SpendingActivity</string>
    <string name="spendings">Затраты</string>
    <string name="category">Категория</string>
    <string name="shop">Магазин</string>
    <string name="credit_card">Карта</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="name">Название</string>
    <string name="change_name">Изменить название</string>
    <string name="change">Изменить</string>
    <string name="cancel">Отмена</string>
    <string name="save_name">Сохранить имя</string>
    <string name="union_shops">Объединить магазины</string>
    <string name="categories">Категории</string>
    <string name="add">Добавить</string>
    <string name="change_category">Изменить категорию</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="not_specified">Не задан</string>
    <string name="monthly">Бюджет на месяц</string>
    <string name="rest">Остаток</string>
    <string name="title_activity_start">Spendings</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="spent">Потрачено</string>
    <string name="last_spending">Последняя покупка</string>
    <string name="total_plan">Запланировано</string>
    <string name="left">Осталось</string>
    <string name="date">Дата</string>
    <string name="delete">Удалить</string>
</resources>
