<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_shop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="farrakhov.aydar.spendings.screen.shop.ShopActivity"
    tools:showIn="@layout/activity_shop">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10">

        <EditText
            android:id="@+id/changeShopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shop"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_name"
        android:checked="true"
        android:id="@+id/save_shop_name"
        android:layout_marginBottom="@dimen/margin_10"/>


    <Spinner
        android:layout_marginBottom="@dimen/margin_10"
        android:id="@+id/shops_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/union_shops"
        android:checked="false"
        android:id="@+id/union_shops"/>




</LinearLayout>
