<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_standard"
    android:layout_gravity="center_vertical"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:paddingEnd="@dimen/padding_medium"
    android:paddingStart="@dimen/padding_72">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_standard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cost"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text.16"/>

                <TextView
                    android:id="@+id/category_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/spent"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text.12"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/shop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text.16"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shop"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text.12"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text.16"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text.12"/>
            </LinearLayout>
        </LinearLayout>


    </FrameLayout>


</FrameLayout>