<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_spending"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="farrakhov.aydar.spendings.screen.spending.SpendingActivity"
    tools:showIn="@layout/activity_spending">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_standard"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorAccent"
                    android:src="@drawable/ic_trending_flat"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_32"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spendings_value"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text.20"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text.14"
                        android:text="@string/spent"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/open_shop"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_standard"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorAccent"
                    android:src="@drawable/ic_shopping_cart"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_32"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/shop_value"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text.20"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text.14"
                        android:text="@string/shop"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_standard"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/colorAccent"
                    android:src="@drawable/ic_account_balance"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_32"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/card_value"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text.20"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/text.14"
                        android:text="@string/credit_card"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/delete_spending"/>


</LinearLayout>
